--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 <div class="layout-column mt-75 pb-50 mx-16">
   <app-theme-switcher (onThemeChanged)="applyTheme($event)"></app-theme-switcher>
   <app-blog [blogPosts]="blogPosts"></app-blog>
-  <button type="button" class="btn btn-primary">Light Theme</button>
+  <button type="button" class="btn theme--dark">Light Theme</button>
 </div>
 
